...
    <string name="set_up_flow_crypt">Set up %1$s</string>
    <plurals name="found_backup_of_your_account_key">
        <item quantity="one">We found a backup of your key</item>
        <item quantity="other">We found backups of %1$d keys</item>
    </plurals>
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
    <string name="please_wait_while_backup_will_be_saved">Making a backup, please wait</string>
    <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
...
    <string name="repeat_pass_phrase">Repeat pass phrase</string>
    <string name="loss_of_this_pass_phrase_cannot_be_recovered">Lost pass phrase cannot be recovered.</string>
    <string name="see_choosing_secure_pass_phrases">See choosing secure pass phrases</string>
    <string name="select_stronger_pass_phrase">Please select a stronger pass phrase. Combinations of 4 to 5 uncommon
        words are the best.</string>
    <string name="password_quality_subtext">(time to crack:</string>
    <string name="password_quality_perfect">perfect</string>
    <string name="password_quality_great">great</string>
    <string name="password_quality_good">good</string>
    <string name="password_quality_reasonable">reasonable</string>
    <string name="password_quality_poor">poor</string>
    <string name="password_quality_weak">weak</string>
    <string name="repeat_passphrase_hint">Please repeat it one more time. Make sure to note the pass phrase down.</string>
    <string name="pass_phrases_do_not_match">The two pass phrases do not match, please try again.</string>
    <string name="you_are_all_set">You\'re all set!</string>
    <string name="you_can_send_and_receive_encrypted_emails">From now on, you can send and receive encrypted emails on
        this email account.</string>
    <string name="please_wait_while_key_will_be_created">Creating a key, please wait</string>
    <string name="not_private_key">This is not a private key</string>
    <string name="setup_app">Please set up the app before use this option</string>
...
    <string name="receive_notifications_for">Receive notifications for:</string>
    <string name="no_key_available_for_your_email_account">No key available for your email account. Please write %1$s for help.</string>
    <string name="no_key_available_for_your_emails">No keys available for your email addresses %1$s and %2$s. Please write %3$s for help.</string>
    <string name="pass_phrase_changed">Pass phrase successfully changed.</string>
    <string name="please_wait_while_pass_phrase_will_be_changed">Changing a pass phrase, please wait</string>
    <string name="backup_options">Backup options</string>
    <string name="change_pass_phrase">Change pass phrase</string>
    <string name="account_has_no_associated_keys">This account has no associated keys. Write us at %1$s</string>
    <string name="pass_phrase_is_too_weak">Your pass phrase is too weak</string>
    <string name="fix">fix</string>
    <string name="different_pass_phrases">Your private keys have different pass phrases</string>
    <plurals name="file_contains_some_amount_of_keys">
        <item quantity="one">[%1$s]</item>
...
